v0.0.4/_sources/generated/gallery/14-bssfp/bssfp3D_sequence.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "generated/gallery/14-bssfp/bssfp3D_sequence.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_generated_gallery_14-bssfp_bssfp3D_sequence.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_generated_gallery_14-bssfp_bssfp3D_sequence.py:


==================
3D balanced SSFP
==================

A slab-selective low-flip-angle excitation and balanced Cartesian readout repeat
with alternating RF phase and zero net gradient moment in every TR. The
preserved transverse coherence establishes a high-SNR steady state governed by
T2/T1 and off-resonance. A half-flip preparation reduces transient oscillation.
3D bSSFP is used for high-SNR structural imaging.

.. GENERATED FROM PYTHON SOURCE LINES 12-32








.. GENERATED FROM PYTHON SOURCE LINES 33-37

Baseline
--------

A full Cartesian sampling of the slab.

.. GENERATED FROM PYTHON SOURCE LINES 37-45

.. code-block:: Python


    import pypulseqpp as pp
    from pypulseqpp.sequences import bssfp3D_sequence

    baseline = bssfp3D_sequence(n_x=160, n_y=160, n_z=32, tr=None)
    print(f"{baseline.num_blocks} blocks, {baseline.duration()[0]:.2f} s")






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    11985 blocks, 16.46 s




.. GENERATED FROM PYTHON SOURCE LINES 46-48

Sequence diagram
----------------

.. GENERATED FROM PYTHON SOURCE LINES 48-51

.. code-block:: Python


    baseline.paper_plot()




.. image-sg:: /generated/gallery/14-bssfp/images/sphx_glr_bssfp3D_sequence_001.png
   :alt: bssfp3D sequence
   :srcset: /generated/gallery/14-bssfp/images/sphx_glr_bssfp3D_sequence_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    namespace(diagram=<mrsd.diagram.Diagram object at 0x7f8dc9018c20>, tr=3954, underlays=[1, 251, 501, 751, 1001, 1251, 1501, 1751, 1983, 2001, 2251, 2501, 2751, 3001, 3251, 3501, 3751])



.. GENERATED FROM PYTHON SOURCE LINES 52-56

Sampling order
--------------

The phase-encode plane in the order it is read.

.. GENERATED FROM PYTHON SOURCE LINES 56-59

.. code-block:: Python


    pp.plot.plot_kspace(baseline, color_by="order", plane="yz", show_trajectory=False)




.. image-sg:: /generated/gallery/14-bssfp/images/sphx_glr_bssfp3D_sequence_002.png
   :alt: bssfp3D sequence
   :srcset: /generated/gallery/14-bssfp/images/sphx_glr_bssfp3D_sequence_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 605x550 with 2 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 60-66

Acceleration on both encoded axes
---------------------------------

Subsampling the line and partition axes reduces the number of repetitions.
For fixed TR and flip angle, the RF and gradient phase cycling that establishes
the steady state is unchanged.

.. GENERATED FROM PYTHON SOURCE LINES 66-78

.. code-block:: Python


    alternative = bssfp3D_sequence(n_x=160, n_y=160, n_z=32, ry=2, rz=2, tr=None)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

                       blocks  duration (s)  acquisitions
    full                11985         16.46          3995
    2 x 2                3837          5.27          1279




.. GENERATED FROM PYTHON SOURCE LINES 79-81

.. code-block:: Python

    pp.plot.plot_kspace(alternative, color_by="order", plane="yz", show_trajectory=False)




.. image-sg:: /generated/gallery/14-bssfp/images/sphx_glr_bssfp3D_sequence_003.png
   :alt: bssfp3D sequence
   :srcset: /generated/gallery/14-bssfp/images/sphx_glr_bssfp3D_sequence_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 605x550 with 2 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 23.335 seconds)


.. _sphx_glr_download_generated_gallery_14-bssfp_bssfp3D_sequence.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: bssfp3D_sequence.ipynb <bssfp3D_sequence.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: bssfp3D_sequence.py <bssfp3D_sequence.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: bssfp3D_sequence.zip <bssfp3D_sequence.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
